---------------------------------------------------------------------------------------------------
Version: 1.14.5
Date: 2020-09-16
  Bugfixes:
    - on_provider events didn't include LuaTrain
---------------------------------------------------------------------------------------------------
Version: 1.14.4
Date: 2020-09-13
  Changes:
    - pushed FLib to 0.3.3
---------------------------------------------------------------------------------------------------
Version: 1.14.3
Date: 2020-09-04
  Bugfixes:
    - increased TrainLeaves debug log verbosity
    - fluid deliveries sometimes incorrectly detected incomplete pickup due to lsb differences #230
---------------------------------------------------------------------------------------------------
Version: 1.14.2
Date: 2020-08-30
  Bugfixes:
    - disabled auto barreling on fluids used for alert icons #228
---------------------------------------------------------------------------------------------------
Version: 1.14.1
Date: 2020-08-28
  Bugfixes:
    - added missing delivery check in TrainArrives
---------------------------------------------------------------------------------------------------
Version: 1.14.0
Date: 2020-08-28
  Features:
    - updated to Factorio 1.0
    - use Factorio alert system for common warnings and errors
    - added cargo alerts
---------------------------------------------------------------------------------------------------
Version: 1.13.10
Date: 2020-07-28
  Features:
    - increased message level of empty-depot to warning #217
    - increased message level of no-train-found to warning #217
---------------------------------------------------------------------------------------------------
Version: 1.13.9
Date: 2020-06-06
  Features:
    - reworked German localisation #216
    - localisation for dropdowns
---------------------------------------------------------------------------------------------------
Version: 1.13.8
Date: 2020-05-29
  Bugfixes: