@@ -1,6 +1,7 @@
 [mod-setting-name]
 ltn-interface-console-level=Nachrichtendetailgrad
 ltn-interface-message-filter-age=Nachrichtenfilterdauer (Ticks)
+ltn-interface-factorio-alerts=Factorio Alarme
 ltn-interface-debug-logfile=Debug-Protokollierung aktivieren
 
 ltn-dispatcher-enabled=Disponent aktiv
@@ -20,6 +21,7 @@ ltn-stop-default-network=Standard Netzwerk ID
 [mod-setting-description]
 ltn-interface-console-level=Nachrichten Detailgrad.\n\n0: Aus\nKeine Nachrichten werden generiert.\n\n1: Fehler & Warnungen\nNur Fehler & Warnungen werden generiert.\n\n2: Informationen (Standardwert)\nInformiert über grundlegende Informationen wie fehlende Ressourcen und erstellte Lieferungen.\n\n3: Ausführliche Nachrichten\nErweiterte Informationen über Stations- und Zug-Suche.
 ltn-interface-message-filter-age=Nachrichtenalter in Ticks bevor gefilterte Nachrichten erneut gezeigt werden.\nStandardwert = 18000
+ltn-interface-factorio-alerts=Fehler & Warnungen werden als Factorio Alarme angezeigt.
 ltn-interface-debug-logfile=Schreibt Debug Informationen in /Factorio/factorio-current.log.
 
 ltn-dispatcher-enabled=Warnung: Durch deaktivieren des Disponenten werden keine Lieferung generiert.\nVerfügbare Gegenstände werden weiterhin überwacht.
