@@ -1,6 +1,7 @@
 [mod-setting-name]
 ltn-interface-console-level=Message level
 ltn-interface-message-filter-age=Message filter timeout (ticks)
+ltn-interface-factorio-alerts=Factorio Alerts
 ltn-interface-debug-logfile=Enable debug log
 
 ltn-dispatcher-enabled=Dispatcher Enabled
@@ -20,6 +21,7 @@ ltn-stop-default-network=Default network ID
 [mod-setting-description]
 ltn-interface-console-level=Detail level of in game messages.\n\n0: Off\nNo messages will be generated.\n\n1: Errors & Warnings\nPrint only errors and warnings.\n\n2: Notifications (default)\nPrint basic information like missing resources or generating deliveries.\n\n3: Detailed Messages\nPrint detailed information about finding providers and trains.
 ltn-interface-message-filter-age=Message age in ticks before filtered messages are shown again.\ndefault = 18000
+ltn-interface-factorio-alerts=Show errors and warnings as Factorio alerts
 ltn-interface-debug-logfile=Write debug information to /Factorio/factorio-current.log.
 
 ltn-dispatcher-enabled=Warning: Deactivating Dispatcher stops delivery generation.\nItem levels will still be monitored.
